2004-02-01  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Implemented print_breaking_stderr, a wrapper around
	print_breaking that causes output to go to STDERR.
	* Package.pm: For all diagnostic/status messages from 'fink list',
	send to STDERR. For all that are not critical, don't output unless
	output is a  terminal (i.e., hide if a Unix pipeline).
	
2004-02-01  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Resuscitated RangerRick's idea from CVS r1.95 of
	adding line numbers to parser error messages.

2004-02-01  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm, Services.pm, Validation.pm: finished implementing
	splittoffN (etc.) passing to read_properties_var() and fixed
	quotation mark placement in its messages.

2004-01-30  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Added second parameter to add_splitoff() for
	splitoff #, and pass it as part of $file to read_properties_var()
	so parsing-error error messages note which splitoff is broken.

2004-01-28  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Error if Version or Revision contain forbidden
	characters (according to Debian docs).

2004-01-26  Rob Braun  <bbraun@users.sourceforge.net>

	* Selfupdate.pm: rsync with the -r flag instead of the -a flag.
	the difference is that -r will not preserve ownership/groups,
	permissions, links, times, and device files.  None of this 
	matters for .info and .patch files, since there are no links
	or device files, and the ownership, permissions, and times
	on the server don't matter to the client.  However, we will
	continue using -a on the TIMESTAMP file to preserve the time
	on that.

2004-01-21  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: If a package lists itself in its own Conflicts or
	Replaces, remove it from that list (needed for writing mutually
	exclusive variants).

2004-01-21  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Added new $err_info parameter to expand_percent that